kernel/.err
In file included from src/irq/irq_handle.c:1:
./include/common.h:13:17: error: redeclaration of C++ built-in type 'bool' [-fpermissive]
 typedef uint8_t bool;
                 ^~~~
